# coldsolt-dancing

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  main.py  manage.py  pyproject.toml  settings.py
booking/: admin.py  models.py  tests.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_alter_reservation_slot_and_more.py
booking/static/booking/css/: style.css
booking/templates/booking/: base.html  calendar.html  index.html  login.html  my_bookings.html  register.html
coldsolt/: asgi.py  settings.py  wsgi.py
